syntax = "proto3";

package grpc.hello;

option go_package = "go-playground/grpc;hello";

service Greeter {
    rpc SayHello(HelloRequest) returns (HelloResponse){}
    // Sends another greeting
    rpc SayHelloAgain (HelloRequest) returns (HelloResponse) {}

    rpc LotsOfReplies(HelloRequest) returns (stream HelloResponse){}

    rpc LotsOfGreetings(stream HelloRequest) returns (HelloResponse) {}

    rpc BidiHello(stream HelloRequest) returns (stream HelloResponse){}
}

message HelloRequest {
    string greeting = 1;
}

message HelloResponse {
    string reply = 1;
}
